[gd_scene load_steps=4 format=3 uid="uid://dksvvno0nh0t8"]

[ext_resource type="Script" path="res://scenes/playground/player.gd" id="1_a3khl"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ns3kk"]
radius = 0.25
height = 1.5

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_ck82p"]
length = 2.0

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_a3khl")

[node name="hitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("CapsuleShape3D_ns3kk")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
current = true

[node name="Area3D" type="Area3D" parent="Camera3D"]
collision_layer = 2147483648
collision_mask = 2147483648

[node name="CollisionShape3D" type="CollisionShape3D" parent="Camera3D/Area3D"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
shape = SubResource("SeparationRayShape3D_ck82p")

[node name="ledgeDetectorBottom" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, -1)

[node name="ledgeDetectorTop" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
target_position = Vector3(0, 0, -1)

[node name="ledgeSpaceDetector" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.75, -0.5)
enabled = false
target_position = Vector3(0, -1.75, 0)
hit_from_inside = true

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
